# katana

./: .gitignore  .travis.yml  BUILD.bazel  README.md  WORKSPACE  architecture.drawio  go.mod  go.sum
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/morrisoncole/katana/: MainActivity.kt
android/app/src/main/proto/: dictionary.proto
android/app/src/main/res/values/: colors.xml
android/app/src/test/java/com/morrisoncole/katana/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/androidTest/java/com/morrisoncole/katana/: ExampleInstrumentedTest.kt
app/src/main/res/values/: styles.xml
go/: BUILD.bazel  README.md  go.mod  go.sum  main.go  start_cloud_sql_proxy.sh
go/client/: BUILD.bazel  main.go
go/com.morrisoncole/jmdict/: main.go
go/com.morrisoncole/jmdict/model/: jmdict.go
go/ingest/: BUILD.bazel  ingest.go
go/ingest/model/: BUILD.bazel  entity.go
go/model/: jmdict.go
go/schema/: BUILD.bazel  dictionary.pb.go  generate_protos.sh
go/server/: BUILD.bazel  db.go  db_datastore.go  dictionary.go  index.yaml  main.go  server.go  update_indexes.sh
go/src/com.morrisoncole/jmdict/: main.go
go/src/com.morrisoncole/jmdict/model/: jmdict.go
go/testdata/: dictionary_with_one_entry.json  dictionary_with_one_entry.xml
